# Bosch_Simulator

src/example/src/: RcBrainThread.py  controlCamera.py
src/models_pkg/camera_front/: model.sdf
src/models_pkg/rcCar_assembly/: model.sdf
src/plugins_pkgs/bno055_plugin/: CMakeLists.txt
src/plugins_pkgs/car_plugin/: CMakeLists.txt
src/plugins_pkgs/gps_plugin/: CMakeLists.txt
src/plugins_pkgs/traffic_light_plugin/: CMakeLists.txt
src/simulation_vehicle_interface/: CMakeLists.txt  package.xml
src/simulation_vehicle_interface/launch/: start.launch
src/simulation_vehicle_interface/src/: simulation_vehicle_interface.py
src/traffic_light_pkg/: CMakeLists.txt
src/vehicle_interface/: CMakeLists.txt  package.xml
src/vehicle_interface/launch/: start.launch
