<?xml version="1.0"?>
<package format="2">
  <name>simulation_vehicle_interface</name>
  <version>0.0.0</version>
  <description>The simulation_vehicle_interface package</description>

  <maintainer email="christian.guba.tu@gmail.com">BTC</maintainer>

  <license>BSD-3</license>

  <url type="website">boschfuturemobility.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>btc_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>btc_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>btc_msgs</exec_depend>

</package>
